# BananaBot

./: .clang-tidy  .clangd  .cproject  .gitignore  .mxproject  .project  BananaBot.ioc  CMakeLists.txt  CMakeLists_template.txt  README.md  STM32H723VETX_FLASH.ld
.ocd/: daplink.cfg
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
Core/Inc/: RTE_Components.h  fdcan.h  main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  tx_user.h  usart.h
Core/Src/: adc.c  bdma.c  dma.c  fdcan.c  gpio.c  main.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  system_stm32h7xx.c  tim.c  tx_initialize_low_level.S  usart.c  usb_otg.c
Core/Startup/: startup_stm32h723vetx.s
Docs/: 1000HZ-100HZ-IIRO2.fcf  500HZ-100HZ-IIRO2.fcf  500HZ-10HZ-IIRO2.fcf  500HZ-2HZ-IIRO2.fcf  Construct.drawio  ControlHardware.drawio  Controller.drawio  FrameBoot.drawio  Jump_Mode.drawio  KF.drawio  Leg.drawio  MotorIMUTask.drawio  MotorTask.drawio  OdomDynamic.drawio  OffGroundControl.drawio  Physical.drawio  RemoteState.drawio  Size.drawio  Start_Mode.drawio  ToolChains.drawio
LVGL/: lv_conf.h
LVGL/env_support/cmake/: custom.cmake
Module/BSP/Inc/: DL_H723.h  DWT.hpp  Filter.hpp  FishMessage.h  Flash.hpp
Module/BSP/Src/: Flash.cpp
Module/IMU/Inc/: QuaternionEKF.h  kalman_filter.h  libbmi088-1.0.hpp
Module/IMU/Src/: QuaternionEKF.c  kalman_filter.c  libbmi088-1.0.cpp
Module/LED/Inc/: libws2812screen-1.0.hpp
Module/LED/Src/: libws2812screen-1.0.cpp
Module/Mavlink/: FishCom.xml  README.md
Module/Mavlink/FishCom/: FishCom.h  mavlink.h  mavlink_msg_chs_ctrl_info.h  mavlink_msg_chs_imu_info.h  mavlink_msg_chs_manage_info.h  mavlink_msg_chs_motor_info.h  mavlink_msg_chs_odom_info.h  mavlink_msg_chs_remoter_info.h  mavlink_msg_chs_servos_info.h  testsuite.h  version.h
Module/Motor/Inc/: DMDriver.h  KF_VelFusion.h  LinkSolver.h
Module/Motor/Src/: DMDriver.cpp  KF_VelFusion.c  LinkSolver.cpp
Module/OneMessage/: CMakeLists.txt  README.md  om_config.h  user_malloc.c
Module/OneMessage/app/: om_log.c
Module/OneMessage/comp/: om_list.c  om_list.h
Module/OneMessage/core/: om_core.c  om_core.h  om_def.h  om_lib.h
Module/PSAI/: README.md
Module/PSAI/Inc/: libimu-a-1.0.h  libimu-a-1.1.h  libpid-i-1.0.hpp  libpid-i-2.1.hpp  libspi-a-1.0.h  libspi-i-hal-1.0.hpp
Service/Inc/: BananaMsgs.h  ServiceBooster.h  ServiceIMU.h  ServiceMsgAPI.h  ServiceRemoter.h
Service/Src/: ServiceBooster.cpp  ServiceIMU.cpp  ServiceMsgAPI.cpp  ServiceRemoter.cpp
Task/Inc/: TaskBooster.h  TaskControl.h  TaskMessage.h  TaskMotor.h  TaskServo.h  TaskWheel.h
Task/Src/: TaskBooster.cpp  TaskControl.cpp  TaskHeatbeat.cpp  TaskMotor.cpp  TaskServo.cpp  TaskWheel.cpp
USBX/App/: app_usbx_device.c  app_usbx_device.h  ux_device_cdc_acm.c  ux_device_cdc_acm.h  ux_device_descriptors.h
matlab/: BananaBotLQR.m  Jacobian.m  LQRFun2.m  LQRModule.m  VarCal.m
matlab/DrawPictures/: PicBall.m  PicDisturb.m  PicJump.m  PicNormal.m  PicSingle.m  PicSky.m  PicYaw.m  linkscope_cfg.ini
matlab/html/: LQRModule.html
